fix bug tasks got cut off

--- a/src/Tasks.css
+++ b/src/Tasks.css
@@ -118,7 +118,7 @@
 }
 
 .tasks-list.expanded {
-    max-height: 100vh;
+    max-height: unset;
 }
 
 .task-card {
